<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Japanese Assistant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empty"></string>
    <string name="kanji_example">勉</string>
    <string name="onyomi_example">ベン</string>
    <string name="kunyomi_example">つと.める</string>
    <string name="meaning_example">exertion</string>
    <string name="strokes_example">10</string>
    <string name="radical_example">丿</string>
    <string name="jouyou_example">3</string>
    <string name="jlpt_example">4</string>
    <string name="onyomi">On: </string>
    <string name="kunyomi">Kun: </string>
    <string name="onyomi_score">On reading</string>
    <string name="kunyomi_score">Kun reading</string>
    <string name="jlpt">JLPT: </string>
    <string name="jouyou">Jouyou: </string>
    <string name="meaning">Meaning</string>
    <string name="SCORES">SCORES</string>
    <string name="recognition">Recognition</string>
    
    <string name="number_of_strokes">Strokes: </string>
    <string name="radical">Radical: </string>
    <string name="next">次 \nNext</string>
    <string name="previous">前 Previous</string>
    <string name="filter">Filter </string>
    <string name="filter_prompt">Field</string>
    <string name="placeholder">placeholder</string>

    <string-array name="filter_1">
        <item>Clear filters</item>
        <item>Number of strokes</item>
        <item>JLPT level</item>
        <item>Jouyou level</item>
    </string-array>
    <string-array name="filter_stroke">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string-array name="jlpt_level">
        <item>Not from any JLPT</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="jouyou_level">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="empty_list">
        <item></item>
    </string-array>
    
    <string-array name="number_of_questions">
        <item>10 questions</item>
        <item>25 questions</item>
        <item>50 questions</item>
        <item>100 questions</item>
        <item>Infinite questions</item>
    </string-array>
    <string name="n1">N1</string>
    <string name="n2">N2</string>
    <string name="n3">N3</string>
    <string name="n4">N4</string>
    <string name="n5">N5</string>
    <string name="kanji2meaning">Guess meaning from kanji</string>
    <string name="meaning2kanji">Guess kanji from meaning</string>
    <string name="kanji2kun">Guess kun\'yomi reading from kanji</string>
    <string name="kanji2on">Guess on\'yomi reading from kanji</string>
    <string name="kanji2onkun">Guess on\'yomi or kun\'yomi reading from kanji</string>
    <string name="start_test">Start test</string>
    <string name="submit">Submit</string>

    

</resources>