<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/kanji_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textSize="30sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:weightSum="1"
         >

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center"
            android:text="@string/placeholder"
   
            android:textSize="20sp" />

        <TextView
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center"
            android:text="@string/jlpt_example"
            android:textSize="24sp"

            android:textColor="#00FF00" />

        <TextView
            android:id="@+id/wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:gravity="center"
            android:text="@string/jouyou_example"
            android:textSize="24sp"

            android:textColor="#FF0000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout4"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/b3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".50"
            android:text="@string/kanji_example"
            android:textSize="68sp" />

        <Button
            android:id="@+id/b4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".50"
            android:text="@string/kanji_example"
            android:textSize="68sp"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LinearLayout3"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/b1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".50"
            android:text="@string/kanji_example" 
            android:textSize="68sp"/>

        <Button
            android:id="@+id/b2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".50"
            android:text="@string/kanji_example"
            android:textSize="68sp" />
    </LinearLayout>

</RelativeLayout>